@@ -1,5 +1,10 @@
 2011-04-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/loader/i386/linux.c (grub_linux_boot): Supply target rather
+	than source address for efi mmap buffer.
+
+2011-04-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/partmap/amiga.c (amiga_partition_map_iterate): Fix a
 	wrong action on non-detecting the magic.
 
